refactor(service): migrate cart and order flows to Spring Data JPA