@@ -8,13 +8,16 @@ import co.edu.cesde.pps.exception.InvalidCartStateException;
 import co.edu.cesde.pps.exception.ValidationException;
 import co.edu.cesde.pps.mapper.OrderMapper;
 import co.edu.cesde.pps.model.*;
+import co.edu.cesde.pps.repository.OrderRepository;
+import co.edu.cesde.pps.repository.OrderStatusRepository;
 import co.edu.cesde.pps.util.CalculationUtils;
 import co.edu.cesde.pps.config.AppConfig;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Random;
 import java.util.stream.Collectors;
@@ -38,6 +41,8 @@ import java.util.stream.Collectors;
  * - Inyección de OrderRepository
  * - Persistencia real
  */
+@Service
+@Transactional(readOnly = true)
 public class OrderService {
 
     private final OrderMapper orderMapper;
@@ -45,18 +50,20 @@ public class OrderService {
     private final CartService cartService;
     private final AddressService addressService;
     private final ProductService productService;
-    // TODO Etapa 06: private final OrderRepository orderRepository;
-    private final List<Order> ordersInMemory;
+    private final OrderRepository orderRepository;
+    private final OrderStatusRepository orderStatusRepository;
     private final Random random;
 
     public OrderService(UserService userService, CartService cartService,
-                       AddressService addressService, ProductService productService) {
+                       AddressService addressService, ProductService productService,
+                       OrderRepository orderRepository, OrderStatusRepository orderStatusRepository) {
         this.orderMapper = new OrderMapper();
         this.userService = userService;
         this.cartService = cartService;
         this.addressService = addressService;
         this.productService = productService;
-        this.ordersInMemory = new ArrayList<>();
+        this.orderRepository = orderRepository;
+        this.orderStatusRepository = orderStatusRepository;
         this.random = new Random();
     }
 
@@ -86,6 +93,7 @@ public class OrderService {
      * @throws ValidationException si el carrito está vacío o no pertenece al usuario
      * @throws InsufficientStockException si no hay stock suficiente
      */
+    @Transactional
     public OrderDTO checkout(Long userId, Long cartId, Long shippingAddressId,
                             Long billingAddressId) {
         // 1. Validar usuario está registrado
@@ -127,7 +135,7 @@ public class OrderService {
             Product product = item.getProduct();
 
             // Verificar que el producto esté activo
-            if (!product.getIsActive()) {
+            if (!Boolean.TRUE.equals(product.getIsActive())) {
                 throw new ValidationException("Product '" + product.getName() +
                     "' is no longer available");
             }
@@ -142,15 +150,10 @@ public class OrderService {
         // 5. Crear orden con número único
         String orderNumber = generateOrderNumber();
 
-        // NOTE: En esta etapa no hay repositorios JPA; usamos una entity de catálogo mínima.
-        OrderStatus pendingStatus = OrderStatus.builder()
-                .orderStatusId(1L)
-                .name("PENDING")
-                .description("Order created, awaiting payment")
-                .build();
+        OrderStatus pendingStatus = orderStatusRepository.findByNameIgnoreCase("PENDING")
+                .orElseThrow(() -> new EntityNotFoundException("OrderStatus", "PENDING"));
 
         Order order = Order.builder()
-                .orderId(generateNextId())
                 .orderNumber(orderNumber)
                 .user(user)
                 .orderStatus(pendingStatus)
@@ -169,7 +172,6 @@ public class OrderService {
                     cartItem.getUnitPrice(), cartItem.getQuantity());
 
             OrderItem orderItem = OrderItem.builder()
-                    .orderItemId(generateNextOrderItemId())
                     .order(order)
                     .product(cartItem.getProduct())
                     .quantity(cartItem.getQuantity())
@@ -185,7 +187,7 @@ public class OrderService {
         // 7. Calcular totales
         List<BigDecimal> lineTotals = order.getItems().stream()
                 .map(OrderItem::getLineTotal)
-                .collect(Collectors.toList());
+                .toList();
 
         BigDecimal subtotal = CalculationUtils.calculateOrderSubtotal(lineTotals);
         BigDecimal taxRate = BigDecimal.valueOf(AppConfig.getDefaultTaxRate());
@@ -208,9 +210,7 @@ public class OrderService {
         cart.setStatus(CartStatus.CONVERTED);
         cart.setUpdatedAt(LocalDateTime.now());
 
-        // TODO Etapa 06: orderRepository.save(order);
-        // TODO Etapa 06: cartRepository.save(cart);
-        ordersInMemory.add(order);
+        order = orderRepository.save(order);
 
         return orderMapper.toDTO(order);
     }
@@ -235,10 +235,7 @@ public class OrderService {
      * @throws EntityNotFoundException si no existe
      */
     public OrderDTO findByOrderNumber(String orderNumber) {
-        // TODO Etapa 06: Order order = orderRepository.findByOrderNumber(orderNumber)
-        Order order = ordersInMemory.stream()
-                .filter(o -> o.getOrderNumber().equalsIgnoreCase(orderNumber))
-                .findFirst()
+        Order order = orderRepository.findByOrderNumberIgnoreCase(orderNumber)
                 .orElseThrow(() -> new EntityNotFoundException("Order with number: " + orderNumber));
 
         return orderMapper.toDTO(order);
@@ -252,13 +249,7 @@ public class OrderService {
      */
     public List<OrderDTO> findOrdersByUser(Long userId) {
         userService.findUserEntityOrThrow(userId); // Validar que existe
-
-        // TODO Etapa 06: List<Order> orders = orderRepository.findByUserId(userId);
-        List<Order> userOrders = ordersInMemory.stream()
-                .filter(o -> o.getUser() != null && o.getUser().getUserId().equals(userId))
-                .collect(Collectors.toList());
-
-        return orderMapper.toDTOList(userOrders);
+        return orderMapper.toDTOList(orderRepository.findByUser_UserId(userId));
     }
 
     /**
@@ -268,13 +259,7 @@ public class OrderService {
      * @return Lista de OrderDTO
      */
     public List<OrderDTO> findOrdersByStatus(Long statusId) {
-        // TODO Etapa 06: List<Order> orders = orderRepository.findByOrderStatusId(statusId);
-        List<Order> statusOrders = ordersInMemory.stream()
-                .filter(o -> o.getOrderStatus() != null &&
-                        o.getOrderStatus().getOrderStatusId().equals(statusId))
-                .collect(Collectors.toList());
-
-        return orderMapper.toDTOList(statusOrders);
+        return orderMapper.toDTOList(orderRepository.findByOrderStatus_OrderStatusId(statusId));
     }
 
     /**
@@ -285,13 +270,7 @@ public class OrderService {
      * @return Lista de OrderDTO
      */
     public List<OrderDTO> findOrdersByDateRange(LocalDateTime startDate, LocalDateTime endDate) {
-        // TODO Etapa 06: List<Order> orders = orderRepository.findByCreatedAtBetween(start, end);
-        List<Order> rangeOrders = ordersInMemory.stream()
-                .filter(o -> o.getCreatedAt().isAfter(startDate) &&
-                           o.getCreatedAt().isBefore(endDate))
-                .collect(Collectors.toList());
-
-        return orderMapper.toDTOList(rangeOrders);
+        return orderMapper.toDTOList(orderRepository.findByCreatedAtBetween(startDate, endDate));
     }
 
     /**
@@ -303,12 +282,16 @@ public class OrderService {
      * @return Número de orden único
      */
     public String generateOrderNumber() {
-        String prefix = AppConfig.getOrderNumberPrefix(); // "ORD-"
-        String date = LocalDateTime.now().format(
-            DateTimeFormatter.ofPattern("yyyyMMdd"));
-        String randomPart = String.format("%06d", random.nextInt(1000000));
+        String prefix = AppConfig.getOrderNumberPrefix();
+        String date = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyyMMdd"));
 
-        return prefix + date + "-" + randomPart;
+        String orderNumber;
+        do {
+            String randomPart = String.format("%06d", random.nextInt(1000000));
+            orderNumber = prefix + date + "-" + randomPart;
+        } while (orderRepository.existsByOrderNumberIgnoreCase(orderNumber));
+
+        return orderNumber;
     }
 
     /**
@@ -334,26 +317,7 @@ public class OrderService {
      * @throws EntityNotFoundException si no existe
      */
     public Order findOrderEntityOrThrow(Long orderId) {
-        // TODO Etapa 06: return orderRepository.findById(orderId)
-        return ordersInMemory.stream()
-                .filter(o -> o.getOrderId().equals(orderId))
-                .findFirst()
+        return orderRepository.findById(orderId)
                 .orElseThrow(() -> new EntityNotFoundException("Order", orderId));
-    }
-
-    // Métodos auxiliares para simular auto-increment
-    private Long generateNextId() {
-        return ordersInMemory.stream()
-                .mapToLong(Order::getOrderId)
-                .max()
-                .orElse(0L) + 1;
-    }
-
-    private Long generateNextOrderItemId() {
-        return ordersInMemory.stream()
-                .flatMap(order -> order.getItems().stream())
-                .mapToLong(OrderItem::getOrderItemId)
-                .max()
-                .orElse(0L) + 1;
     }
 }
